--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.4.6)
-
 project(lvr_ros)
+
+set(CMAKE_CXX_STANDARD 17)
 
 set(PACKAGE_DEPENDENCIES
   actionlib
@@ -42,10 +43,10 @@ endif()
 ### compile with c++11
 if ("${CMAKE_VERSION}" VERSION_LESS "3.1")
   if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    set (CMAKE_CXX_FLAGS "--std=gnu++14 ${CMAKE_CXX_FLAGS}")
+    set (CMAKE_CXX_FLAGS "--std=c++17 ${CMAKE_CXX_FLAGS}")
   endif ()
 else ()
-  set (CMAKE_CXX_STANDARD 14)
+  set (CMAKE_CXX_STANDARD 17)
 endif ()
 
 # enable openmp support
@@ -53,6 +54,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 
 include_directories(
   include
+
   ${catkin_INCLUDE_DIRS}
   ${LVR2_INCLUDE_DIRS}
   ${OpenCV_INCLUDE_DIRS}
@@ -79,8 +81,7 @@ catkin_package(
 
 add_library(${PROJECT_NAME}_conversions
   src/colors.cpp
-  src/conversions.cpp
-)
+  src/conversions.cpp)
 
 target_link_libraries(${PROJECT_NAME}_conversions
   ${catkin_LIBRARIES}
